--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -105,15 +105,15 @@ We then parameterised these models with estimates from the literature of 1) viru
 Together, these components enable us to produce estimates of the variation in riskiness for SARS-CoV-2 transmission between different Locations belonging to the same Setting Type.
 Below we describe each of these components in turn.
 
-#### Modelling the Concentration of Infective Virus in a Room
+#### Modelling the Concentration of Infective Virus in an Enclosed Space
 
-Following the approach of [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#), we model the concentration of pathogen in the air via the following ODE:
+Following the approach of [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#), we model the concentration of pathogen in the air in an enclosed space via the following ODE:
 
 $$
 \nu \frac{dC(t)}{dt} =  - QC - k_DC \nu + I\pi 
 $$
 
-where $v$ is the room volume, $C$ is the infective virus concentration, $t$ is time, $Q$ is the flow rate of air into and out of the room, $k_D$ is the natural decay constant, $I$ is the number of infectious individuals in the room, and $\pi$ is the per capita (infective) virus emission rate.
+where $v$ is the space volume, $C$ is the infective virus concentration, $t$ is time, $Q$ is the flow rate of air into and out of the space, $k_D$ is the natural decay constant, $I$ is the number of infectious individuals in the space, and $\pi$ is the per capita (infective) virus emission rate.
 The closed-form solution to this equation is:
 
 $$
@@ -135,6 +135,13 @@ $$
 C_{ss} =  \frac{I\pi}{\alpha \nu}
 $$
 
+We note here also that for the purposes of the analyses presented here, we calculate the volume of the space as follows:
+$$
+\nu = N D_mH
+$$
+
+where $N$ is the number of people occupying the space, $D_m$ is the density of people in the space (i.e. the number of people per m\^2) and $H$ is the height of the space.
+
 #### Linking this Concentration of Infective Virus to an Infection Risk
 
 We integrate this estimate of the concentration of infective virus in the room from the approach of [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) with the Wells-Riley equation, a simple and widely used model for the airbone transmission of infectious diseases.
@@ -148,17 +155,23 @@ where $P_i$ is the probability a person becomes infected conditional on them spe
 
 #### Estimating Variation in Riskiness Across Different Locations Belonging to the Same Setting Type
 
-| Parameter       | Value Used       | Description                                                                                                                                                                         | Source                                                                                                                                                                                                                                                                                                                                                                                                                               |
-|---------|-----------|------------------------|----------------------------|
-| $\pi$           | $27$             | Rates of (infective) virus emission from infected individuals.                                                                                                                      | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Buonanno et al, 2020](https://www.sciencedirect.com/science/article/pii/S0160412020320675#f0020)                                                                                                                                                                                                                                                  |
-| $A_{school}$    |                  | Range of air-changes per hour considered for schools.                                                                                                                               | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $A_{workplace}$ |                  | Range of air-changes per hour considered for workplaces.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $A_{household}$ |                  | Range of air-changes per hour considered for households.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
-| $A_{leisure}$   |                  | Range of air-changes per hour considered for leisure settings.                                                                                                                      | Assumed to be the same as workplaces.                                                                                                                                                                                                                                                                                                                                                                                                |
-| $k_D$           | 0.64             | Natural decay constant for SARS-CoV-2 in aerosols                                                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [van Doremalen et al, 2020](https://www.nejm.org/doi/full/10.1056/NEJMc2004973)                                                                                                                                                                                                                                                                    |
-| $\nu$           |                  |                                                                                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| $B$             | $0.45$           | Volume breathing rate i.e. the volume of air breathed in and out per hour. Assumes 15 breaths per minute and 500ml tidal volume to produce 0.45m\^3 volume breathing rate per hour. | [the internet - <https://www.verywellhealth.com/tidal-volume-5090250#>[:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female](https://www.verywellhealth.com/tidal-volume-5090250#:~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female). and <https://my.clevelandclinic.org/health/articles/10881-vital-signs>] |
-| $r$             | $1.37 × 10^{-2}$ | The probability that a single inhaled infective virus will initiate an infection.                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Killingley et al, 2022](https://www.nature.com/articles/s41591-022-01780-9)                                                                                                                                                                                                                                                                       |
+We carried out a sensitivity analysis to understand how the ; and derive reasonable bounds for the $\gamma$ parameter described above.
+
+| Parameter       | Value Used                      | Description                                                                                                                                                                         | Source                                                                                                                                                                                                                                                                                                                                                                                                                               |
+|---------|-----------|--------------------------------|-------------------|
+| $\pi$           | 27 viruses per person per hour  | Rates of (infective) virus emission from infected individuals.                                                                                                                      | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Buonanno et al, 2020](https://www.sciencedirect.com/science/article/pii/S0160412020320675#f0020)                                                                                                                                                                                                                                                  |
+| $A_{school}$    | 0.1-2.9 air changes per hour    | Range of air-changes per hour considered for schools.                                                                                                                               | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $D_{school}$    | 30 per 100m\^2                  | Assumed density of individuals in schools                                                                                                                                           | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
+| $A_{workplace}$ | 0.22-4.84 air changes per hour  | Range of air-changes per hour considered for workplaces.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $D_{workplace}$ | 10 per 100m\^2                  | Assumed density of individuals in workplaces                                                                                                                                        | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
+| $A_{household}$ | 0.21-1.48 air changes per hour  | Range of air-changes per hour considered for households.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $D_{household}$ | 5 per 100m\^2                   | Density of individuals in households                                                                                                                                                | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| $A_{leisure}$   | 0.22-4.84 air changes per hour  | Range of air-changes per hour considered for leisure settings.                                                                                                                      | Assumed to be the same as workplaces.                                                                                                                                                                                                                                                                                                                                                                                                |
+| $D_{leisure}$   | 50 per 100m\^2                  | Density of individuals in leisure settings                                                                                                                                          | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                                                                                                                                                                                                                                                                                                             |
+| $k_D$           | 0.64                            | Natural decay constant for SARS-CoV-2 in aerosols                                                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [van Doremalen et al, 2020](https://www.nejm.org/doi/full/10.1056/NEJMc2004973)                                                                                                                                                                                                                                                                    |
+| $H$             | 2.5m                            | Height of the space                                                                                                                                                                 | Assumed                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| $B$             | 0.45 m\^3 per hour              | Volume breathing rate i.e. the volume of air breathed in and out per hour. Assumes 15 breaths per minute and 500ml tidal volume to produce 0.45m\^3 volume breathing rate per hour. | [the internet - <https://www.verywellhealth.com/tidal-volume-5090250#>[:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female](https://www.verywellhealth.com/tidal-volume-5090250#:~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female). and <https://my.clevelandclinic.org/health/articles/10881-vital-signs>] |
+| $r$             | $1.37 × 10^{-2}$                | The probability that a single inhaled infective virus will initiate an infection.                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Killingley et al, 2022](https://www.nature.com/articles/s41591-022-01780-9)                                                                                                                                                                                                                                                                       |
 
 : Table 1: Parameter Estimates Used to Calculate Variation in Riskiness Across Locations Belonging to the Same Setting Type
 
